feat: improve i18n translations and error messages for guest login flow

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -78,31 +78,40 @@
   },
 
   "guest": {
+    "message": {
+      "yourMessageToCouple": "Your message to the couple",
+      "noMessage": "You haven't left a message"
+    },
+    "weddingInfo": {
+      "location": "Location",
+      "date": "Date",
+      "messageForGuests": "Message for guests"
+    },
     "login": {
-      "title": "Sign In",
+      "title": "Welcome to the wedding",
       "firstName": "First Name",
       "lastName": "Last Name",
-      "email": "Email",
+      "email": "Email address",
       "submitButton": "Sign In",
-      "loading": "Sending...",
+      "loading": "Loading...",
       "firstNamePlaceholder": "Enter your first name",
       "lastNamePlaceholder": "Enter your last name",
       "emailPlaceholder": "your.email@example.com",
       "errors": {
-        "firstNameMin": "First name must be at least 2 characters",
-        "lastNameMin": "Last name must be at least 2 characters",
-        "invalidEmail": "Please enter a valid email address",
-        "missingEvent": "Missing event identifier in the link. Contact the couple or check the link!",
-        "sessionExpired": "Session expired or security token error. Please try again.",
-        "genericError": "An error occurred during sign in"
+        "firstNameMin": "First name must be at least 2 characters.",
+        "lastNameMin": "Last name must be at least 2 characters.",
+        "invalidEmail": "Please enter a valid email address.",
+        "missingEvent": "Missing event ID. Please use a valid link from the invitation.",
+        "sessionExpired": "Your session has expired. Please try again.",
+        "genericError": "An error occurred. Please try again."
       },
       "success": {
         "title": "Sign in successful",
-        "description": "Redirecting you to the dashboard."
+        "description": "You have successfully signed in. Redirecting you to your page."
       },
       "accessDenied": {
         "title": "Access Denied",
-        "description": "To access the login page, you must use a valid link from a QR code or an invitation from the admin (event not created or link is invalid)."
+        "description": "To access this page, you must use a valid link from a QR code or an invitation from the couple."
       }
     }
   },
