--- a/locales/sr/translation.json
+++ b/locales/sr/translation.json
@@ -77,31 +77,40 @@
       "error": "Greška"
     },
     "guest": {
+      "message": {
+        "yourMessageToCouple": "Vaša poruka mladencima",
+        "noMessage": "Niste ostavili poruku"
+      },
+      "weddingInfo": {
+        "location": "Lokacija",
+        "date": "Datum",
+        "messageForGuests": "Poruka za goste"
+      },
       "login": {
-        "title": "Prijava",
+        "title": "Dobrodošli na vjenčanje",
         "firstName": "Ime",
         "lastName": "Prezime",
-        "email": "Email",
+        "email": "Email adresa",
         "submitButton": "Prijavi se",
-        "loading": "Slanje...",
+        "loading": "Učitavanje...",
         "firstNamePlaceholder": "Unesite vaše ime",
         "lastNamePlaceholder": "Unesite vaše prezime",
-        "emailPlaceholder": "vasa.adresa@email.com",
+        "emailPlaceholder": "vasa.email@primjer.com",
         "errors": {
-          "firstNameMin": "Ime mora imati najmanje 2 karaktera",
-          "lastNameMin": "Prezime mora imati najmanje 2 karaktera",
-          "invalidEmail": "Unesite validnu email adresu",
-          "missingEvent": "Nedostaje event identifikator u linku. Kontaktirajte mladence ili proverite link!",
-          "sessionExpired": "Sesija je istekla ili je došlo do greške sa sigurnosnim tokenom. Pokušajte ponovo.",
-          "genericError": "Došlo je do greške prilikom prijave"
+          "firstNameMin": "Ime mora imati najmanje 2 karaktera.",
+          "lastNameMin": "Prezime mora imati najmanje 2 karaktera.",
+          "invalidEmail": "Unesite validnu email adresu.",
+          "missingEvent": "Nedostaje ID događaja. Molimo koristite validan link sa pozivnice.",
+          "genericError": "Došlo je do greške. Molimo pokušajte ponovo.",
+          "sessionExpired": "Vaša sesija je istekla. Molimo pokušajte ponovo."
         },
         "success": {
           "title": "Uspješna prijava",
-          "description": "Preusmjeravamo vas na dashboard."
+          "description": "Uspješno ste se prijavili. Preusmjeravamo vas na vašu stranicu."
         },
         "accessDenied": {
           "title": "Nedozvoljen pristup",
-          "description": "Za pristup login stranici morate koristiti validan link sa QR koda ili pozivnicu od admina (event nije kreiran ili link nije ispravan)."
+          "description": "Za pristup ovoj stranici morate koristiti validan link sa QR koda ili pozivnicu od mladenaca."
         }
       }
     },
