--- a/locales/sr/translation.json
+++ b/locales/sr/translation.json
@@ -117,6 +117,11 @@
         "maxReached": "Dostigli ste maksimalan broj slika",
         "thankYou": "Hvala na vašem doprinosu!"
       },
+      "imageSlotBar": {
+        "images": "Slike",
+        "canAddMore": "Možete dodati još {{count}} {{imageText}}",
+        "maxReached": "Dostigli ste maksimalan broj slika"
+      },
       "login": {
         "title": "Dobrodošli na vjenčanje",
         "firstName": "Ime",
